--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,6 @@ services:
     volumes:
       - ./frontend/:/usr/src/app/
       - /usr/src/app/node_modules
-    environment:
-      - MONGO_USER=${MONGO_USERNAME}
-      - MONGO_PASSWORD=${MONGO_PASSWORD}
-      - MONGO_DB=${MONGO_INITDB_DATABASE}
-      - MONGO_HOST=${MONGO_HOST}
-      - PORT=${RECOMMENDER_PORT}
-      - MONGO_PORT=${MONGO_PORT}
     depends_on:
       - backend
     ports:
@@ -22,14 +15,6 @@ services:
     working_dir: /usr/src/app
     volumes:
       - ./backend/:/usr/src/app
-      #- /usr/src/app/target
-    environment:
-      - MONGO_USER=${MONGO_USERNAME}
-      - MONGO_PASSWORD=${MONGO_PASSWORD}
-      - MONGO_DB=${MONGO_INITDB_DATABASE}
-      - MONGO_HOST=${MONGO_HOST}
-      - PORT=${BACKEND_PORT}
-      - MONGO_PORT=${MONGO_PORT}
     command: mvn clean spring-boot:run -DskipTests
     depends_on:
       - database
@@ -45,7 +30,7 @@ services:
     ports:
       - ${RECOMMENDER_PORT}:${RECOMMENDER_PORT}
     environment:
-      - MONGO_USER=${MONGO_USERNAME}
+      - MONGO_USERNAME=${MONGO_USERNAME}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
       - MONGO_DB=${MONGO_INITDB_DATABASE}
       - MONGO_HOST=${MONGO_HOST}
