--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^1.30.1",
     "flatpickr": "^4.6.2",
     "moment": "^2.24.0",
+    "ng-event-source": "^1.0.14",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.10.0",
