--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,6 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-      - /tmp/mongo-volume:/data/db
+      - /tmp/mongo-volume-2:/data/db
     ports:
       - ${MONGO_PORTS}
